# reposcore-py

./: .gitignore  README-template.md  README.md  cache_manager.py  calc_score.py  gh_service.py  main.py  output_writer.py  pyproject.toml  repo_cache.py
.devcontainer/: devcontainer.json
docs/: README-template.md  README.md  python-guide.md  typer-guide.md  vscode-extension.md
tests/: conftest.py  test_cache_manager.py  test_cache_structure.py  test_cache_ttl.py  test_claims_pagination.py  test_fetch_multiple_contributions.py  test_gh_service.py  test_main.py  test_output_writer.py  test_repository_validation.py  test_since_until_filtering.py
tools/: update-docs-readme.py  update-synopsis.py
