[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reposcore-py"
version = "0.1.0"
description = "A CLI for scoring student participation in an open-source class repo, implemented in Python using GraphQL."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gql[requests]>=3.5.0",
    "typer>=0.12.0",
    "pydantic>=2.0",
    "tabulate>=0.9.0",
]

[project.scripts]
reposcore = "main:cli"

[tool.hatch.build.targets.wheel]
only-include = [
  "main.py",
  "output_writer.py",
  "calc_score.py",
  "repo_cache.py",
 ]
